fix blurry icons on safari (#465)

--- a/src/components/icon/style.css
+++ b/src/components/icon/style.css
@@ -3,6 +3,8 @@
 }
 :host {
 	display: block;
+	transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0,0,0)
 }
 :host[hidden] {
 	display: none;
